Added Visit counter
Signed-off-by: vashishthamishra <utkarsh.mishra30@gmail.com>

--- a/simplefolio-master/src/template.html
+++ b/simplefolio-master/src/template.html
@@ -71,7 +71,7 @@
                 I like to teach too :P              
               </p>
               <p class="about-wrapper__info-text">
-                I love to play guitar, sing and write songs. I make terrible sketches too :P.
+                I love to ride motorcycles, play guitar, sing and write songs. I make terrible sketches too :P.
                 I am a physics enthusiast who wonders about Life, the Universe and Everything.
                 I have authored two patents and competed in the prestigious ACM-ICPC regionals.
                 DIY is the way to go!!!                 
@@ -250,6 +250,9 @@
         <p class="footer__text">
           © 2020 - Personal Hobby Page : Utkarsh</a>
           </a>
+          <br/>
+          Hits :
+            <img src="https://hitwebcounter.com/counter/counter.php?page=7660358&style=0036&nbdigits=5&type=page&initCount=0" title="Total Website Hits" Alt="Web Hits"   border="0" /></a>           
         </p>
 
       </div>
